TestRepo2/src/objects/Non_Diageo_Ingredient__c.object
<CustomObject>
    <fields>
        <fullName>Ingredient_Number__c</fullName>
        <label>Ingredient Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <picklist>
            <picklistValues>
                <fullName>0.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.75</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.00</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipe_Modifiers__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Modifiers</label>
        <referenceTo>Recipe_Modifier__c</referenceTo>
        <relationshipLabel>Non Diageo Ingredients</relationshipLabel>
        <relationshipName>Non_Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe_Non_Diageo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe Non-Diageo Product</label>
        <referenceTo>Recipe_Non_Diageo_Product__c</referenceTo>
        <relationshipLabel>Non Diageo Ingredients</relationshipLabel>
        <relationshipName>Non_Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recipe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recipe</label>
        <referenceTo>Recipe__c</referenceTo>
        <relationshipLabel>Non Diageo Ingredients</relationshipLabel>
        <relationshipName>Non_Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ml.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>oz.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tsp.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>unit</label>
        <referenceTo>unit__c</referenceTo>
        <relationshipLabel>Non Diageo Ingredients</relationshipLabel>
        <relationshipName>Non_Diageo_Ingredients</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Non Diageo Ingredient</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>NDI-{00000}</displayFormat>
        <label>Non Diageo Ingredient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Non Diageo Ingredients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>